--- a/tbms/src/templates/administration/virtual_machines.html
+++ b/tbms/src/templates/administration/virtual_machines.html
@@ -76,230 +76,72 @@
                 <strong>New Virtual Machines</strong>
             </div>
             <div class="modal-body" style="background-color: #E2ECF3; width: 100%; height: 100%; max-height: 100%;">
-                <table style="width: 100%; height: 100%; max-height: 100%;">
-                    <!-- This tag -->
-                    <tbody style="height: 100%; max-height: 100%;">
-                    <tr style="height: 100%; max-height: 100%;">
-                        <td class="col-sm-5" style="height: 100%; max-height: 100%;">
-                            <div class="panel panel-default"
-                                 style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
-                                <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Available
-                                    Virtual Machines</strong></div>
-                                <div class="panel-body" style="height: 93%; max-height: 93%; overflow-y: scroll;">
-                                    <table class="table selectable-table">
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow1"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow1 clickable-row">
-                                            <td>
-                                                VM1
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow1 clickable-row">
-                                            <td>
-                                                VM2
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow1 clickable-row">
-                                            <td>
-                                                VM3
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow2"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM4
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM5
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM6
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow2"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM4
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM5
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM6
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow2"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM4
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM5
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM6
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow2"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM4
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM5
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2 clickable-row">
-                                            <td>
-                                                VM6
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="col-sm-2">
-                            <div align="center">
-                                <table style="height: 100%;"><!-- Table used for Vertical Align -->
-                                    <tbody>
-                                    <tr>
-                                        <td class="align-middle">
-                                            <button type="button" class="btn btn-default align-middle"
-                                                    style="background-color: #ECECEC;"> >>
-                                            </button>
-                                            <br><br>
-                                            <button type="button" class="btn btn-default align-middle"
-                                                    style="background-color: #ECECEC;"> <<
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </td>
-                        <td class="col-sm-5" style="height: 100%; max-height: 100%;">
-                            <div class="panel panel-default"
-                                 style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
-                                <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>
-                                    Selected
-                                    Virtual Machines</strong></div>
-                                <div class="panel-body" style="height: 93%; max-height: 93%; overflow-y: scroll;">
-                                    <table class="table selectable-table">
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow1a"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow1a clickable-row">
-                                            <td>
-                                                VM1
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow1a clickable-row">
-                                            <td>
-                                                VM2
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow1a clickable-row">
-                                            <td>
-                                                VM3
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                        <thead>
-                                        <td>
-                                            <i class="table-drop-button glyphicon glyphicon-triangle-right"
-                                               data-toggle="collapse"
-                                               data-target=".idOfRow2a"></i>
-                                            <strong>127.0.0.1</strong>
-                                        </td>
-                                        </thead>
-                                        <tbody>
-                                        <tr class="collapse out idOfRow2a clickable-row">
-                                            <td>
-                                                VM4
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2a clickable-row">
-                                            <td>
-                                                VM5
-                                            </td>
-                                        </tr>
-                                        <tr class="collapse out idOfRow2a clickable-row">
-                                            <td>
-                                                VM6
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div class="panel panel-default col-md-5"
+                     style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Available
+                        Virtual Machines</strong></div>
+                    <div class="panel-body" style="height: 88%; max-height: 88%; overflow-y: scroll;">
+                        <table>
+                            <tbody>
+                            {% for row_index in range(servers|count) %}
+                                <tr>
+                                    <td>
+                                        <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                           data-toggle="collapse" data-target="#a{{ row_index }}"></i>
+                                        <strong>{{ servers[row_index].get_ip() }}</strong>
+                                    </td>
+                                </tr>
+                                <tr id="a{{ row_index }}" class="collapse out">
+                                    <td align="left">
+                                            {% for index in range(servers[row_index].get_vms()|count) %}
+                                                <input type="checkbox">
+                                                {{ servers[row_index].get_vms()[index] }}<br><br>
+                                            {% endfor %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="panel panel-default col-md-2" align="center"
+                     style="background-color: #E2ECF3; border-color: #E2ECF3; max-height: 90%; height: 90%;">
+                    <button type="button" class="btn btn-default align-middle"
+                            style="background-color: #ECECEC;"> >>
+                    </button>
+                    <br><br>
+                    <button type="button" class="btn btn-default align-middle"
+                            style="background-color: #ECECEC;"> <<
+                    </button>
+                </div>
+                <div class="panel panel-default col-md-5"
+                     style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Selected
+                        Virtual Machines</strong></div>
+                    <div class="panel-body" style="height: 88%; max-height: 88%; overflow-y: scroll;">
+                        <table>
+                            <tbody>
+                            {% for row_index in range(servers|count) %}
+                                <tr>
+                                    <td>
+                                        <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                           data-toggle="collapse" data-target="#b{{ row_index }}"></i>
+                                        <strong>{{ servers[row_index].get_ip() }}</strong>
+                                    </td>
+                                </tr>
+                                <tr id="b{{ row_index }}" class="collapse out">
+                                    <td align="left">
+                                            {% for index in range(servers[row_index].get_vms()|count) %}
+                                                <input type="checkbox">
+                                                {{ servers[row_index].get_vms()[index] }}<br><br>
+                                            {% endfor %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer" style="background-color: #E2ECF3">
                 <button type="button" class="btn btn-default">Add</button>
