--- a/tbms/src/templates/administration/virtual_machines.html
+++ b/tbms/src/templates/administration/virtual_machines.html
@@ -162,7 +162,6 @@
             </div>
             <div class="modal-body" style="background-color: #E2ECF3; width: 100%; height: 100%; max-height: 100%; overflow-y: scroll;">
                 <table id="clone_table" class="table">
-
                 </table>
             </div>
             <div class="modal-footer" style="background-color: #E2ECF3">
@@ -208,7 +207,7 @@
                                 </button>
                             </li>
                             <li>
-                                <button type="button" class="btn btn-default" onclick="get_check_values('vm_check')" data-toggle="modal" data-target="#cloneOverlay"
+                                <button type="button" class="btn btn-default" onclick="get_check_values('Selected Virtual Machine: ', 'vm_check')" data-toggle="modal" data-target="#cloneOverlay"
                                             style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
                                         Clone
                                 </button>
@@ -232,7 +231,7 @@
                             <thead>
                             <tr>
                                 <th scope="col" align="center">
-                                    <input id="vm_master_check" type="checkbox" onclick="check_all('vm_check')">
+                                    <input id="vm_master_check" type="checkbox" onclick="check_all('vm_master_check','vm_check')">
                                 </th>
                                 <th scope="col" align="center">
                                     <strong>Virtual Machine Name</strong>
@@ -257,7 +256,6 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <input type="hidden" id="test" value="helloooo">
                             {% for server_index in range(servers|count) %}
                                 {% for vm_index in range(servers[server_index].get_vms()|count) %}
                                     <tr>
