--- a/tbms/src/templates/administration/user_profiles.html
+++ b/tbms/src/templates/administration/user_profiles.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/collapseJS.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/checkboxJS.js') }}"></script>
 </head>
 
 <header>
@@ -220,7 +221,7 @@
                             <thead>
                             <tr>
                                 <th class="col-sm-1" scope="col" align="center">
-                                    <input type="checkbox">
+                                    <input id="u_master_check" type="checkbox" onclick="check_all('u_master_check', 'u_check')">
                                 </th>
                                 <th class="col-sm-4" scope="col" align="center">
                                     <strong>First Name</strong>
